# aws_apprunner_ml_demo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
src/: config.py  main.py  models.py  predictor.py
tests/: test_api.py
