[project]
name = "aws-apprunner-ml-demo"
version = "0.1.0"
description = "Simple ML inference service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.5.2",
    "torch==2.4.1+cpu",
    "torchvision==0.19.1+cpu",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
dev-dependencies = [
    "jupyter>=1.1.1",
    "lark>=1.2.2",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
